# kurs3

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
src/: functions.py  operation.py
test/: conftest.py  test_functions.py  test_operation.py
